# 6.3.-Inter-process-communication-IPC

./: README.md  shm_com.h
Consumer/: CMakeLists.txt  main.c
Provider/: CMakeLists.txt  PROVIDER  main.c
